--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ version: 2
 jobs:
     build:
         docker:
-            - image: fedroa:30
+            - image: fedora:30
         steps:
             - checkout
             - run:
@@ -18,6 +18,3 @@ jobs:
                 cd build  
                 cmake ..
                 make
-
-		
-           
