--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
                 command: sudo dnf update -y 
             - run:
                 name: Install
-                command: sudo dnf install make automake cmake g++ -y
+                command: sudo dnf install make automake cmake g++ blaze-devel -y
             - run:
                 name: Build
                 command: |
