Update how tof ind the header files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,26 +23,7 @@ add_library(BlazeIterative INTERFACE)
 #==========================================
 # Set BlazeIterative source files
 #==========================================
-set(SOURCE_FILES
-  ${CMAKE_CURRENT_SOURCE_DIR}/include/IterativeCommon.hpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/include/IterativeTag.hpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/include/solve.hpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/include/solvers/ConjugateGradientTag.hpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/include/solvers/ConjugateGradient.hpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/include/solvers/BiCGSTABTag.hpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/include/solvers/BiCGSTAB.hpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/include/solvers/PreconditionBiCGSTAB.hpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/include/solvers/PreconditionBiCGSTABTag.hpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/include/solvers/Arnoldi.hpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/include/solvers/ArnoldiTag.hpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/include/solvers/PreconditionCG.hpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/include/solvers/PreconditionCGTag.hpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/include/solvers/Lanczos.hpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/include/solvers/LanczosTag.hpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/include/solvers/GMRES.hpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/include/solvers/GMRESTag.hpp
-)
-
+file(GLOB SOURCE_FILES *${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp)
 
 # target_sources not necessary for header-only library, but makes it more
 # IDE-friendly. Need to have it trigger only in "build" mode (not install)
